force-app/main/default/objects/Integrante__c/Integrante__c.object-meta.xml
<CustomObject>
    <label>Integrante</label>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Nro. de Integrante</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integrantes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>