force-app/main/default/objects/Integrante__c/fields/Apellido__c.field-meta.xml
<CustomField>
    <fullName>Apellido__c</fullName>
    <label>Apellido</label>
    <length>255</length>
    <type>Text</type>
</CustomField>