force-app/main/default/objects/Integrante__c/fields/Cobertura_anterior__c.field-meta.xml
<CustomField>
    <fullName>Cobertura_anterior__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cobertura anterior</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Obra social</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Integrantes</relationshipLabel>
    <relationshipName>Integrantes</relationshipName>
    <type>Lookup</type>
</CustomField>