force-app/main/default/objects/Integrante__c/fields/CUIT_Sin_guiones__c.field-meta.xml
<CustomField>
    <fullName>CUIT_Sin_guiones__c</fullName>
    <label>CUIT (Sin guiones)</label>
    <length>15</length>
    <type>Text</type>
</CustomField>