force-app/main/default/objects/Integrante__c/fields/Discapacitado__c.field-meta.xml
<CustomField>
    <fullName>Discapacitado__c</fullName>
    <label>Discapacitado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>