force-app/main/default/objects/Integrante__c/fields/Edad__c.field-meta.xml
<CustomField>
    <fullName>Edad__c</fullName>
    <formula>YEAR(TODAY()) - YEAR( Fecha_de_Nacimiento__c ) - 
	IF(
		OR( 
			MONTH(TODAY()) &lt; MONTH(Fecha_de_Nacimiento__c), 
				AND( 
					MONTH(TODAY()) == MONTH(Fecha_de_Nacimiento__c), 
					DAY(TODAY()) &lt; DAY(Fecha_de_Nacimiento__c) 
					) 
		), 
	1, 
	0 
	)</formula>
    <label>Edad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>