force-app/main/default/objects/Integrante__c/fields/Estado_civil_docusign__c.field-meta.xml
<CustomField>
    <fullName>Estado_civil_docusign__c</fullName>
    <description>Este campo se utiliza para mostrar los valores correctos para el estado cuivil ya que con el campo principal muestra valores API&apos;s de la lista de Seleccion para el envio de documentos Docusign, NO BORRAR</description>
    <formula>IF(ISPICKVAL(Estado_Civil__c,&quot;C&quot;),&quot;Casado&quot;,
			IF(ISPICKVAL(Estado_Civil__c,&quot;N&quot;),&quot;Concubinato&quot;,
						IF(ISPICKVAL(Estado_Civil__c,&quot;D&quot;),&quot;Divorciado&quot;,
									IF(ISPICKVAL(Estado_Civil__c,&quot;P&quot;),&quot;Separado&quot;,
												IF(ISPICKVAL(Estado_Civil__c,&quot;S&quot;),&quot;Soltero&quot;,
															IF(ISPICKVAL(Estado_Civil__c,&quot;V&quot;),&quot;Viudo&quot;,&quot;&quot;
																		)
															)
												)
									)
						)
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estado civil docusign</label>
    <type>Text</type>
</CustomField>