force-app/main/default/objects/Integrante__c/fields/Fecha_de_nacimientoDOCU__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_nacimientoDOCU__c</fullName>
    <formula>text(DAY( Fecha_de_Nacimiento__c )) +&apos;/&apos;+ text(MONTH( Fecha_de_Nacimiento__c )) +&apos;/&apos;+ text(YEAR( Fecha_de_Nacimiento__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de nacimiento</label>
    <type>Text</type>
</CustomField>