force-app/main/default/objects/Integrante__c/fields/Integrante_accion_rapida__c.field-meta.xml
<CustomField>
    <fullName>Integrante_accion_rapida__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Este campo se autocompleta cuando se ejecuta la QuickAction en Oportunidad &quot;Integrante de Reingreso&quot;. Al tildarse este campo, se dispara un process que hace que se completen los campos de Integrante de oportunidad según los datos de la cuenta elegida</description>
    <label>Integrante acción rapida</label>
    <type>Checkbox</type>
</CustomField>