force-app/main/default/objects/Integrante__c/fields/Integrante_de_reingreso__c.field-meta.xml
<CustomField>
    <fullName>Integrante_de_reingreso__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Integrante de reingreso - Buscar por DNI</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Cuenta_personal__r.Codigo_de_Afiliado__c</field>
            <operation>equals</operation>
            <valueField>Account.Parent.Codigo_de_Afiliado__c</valueField>
        </filterItems>
        <infoMessage>La búsqueda se debe realizar por DNI</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Integrantes (Integrante de reingreso)</relationshipLabel>
    <relationshipName>Integrantes2</relationshipName>
    <type>Lookup</type>
</CustomField>