force-app/main/default/objects/Integrante__c/fields/Nombre_y_Apellido__c.field-meta.xml
<CustomField>
    <fullName>Nombre_y_Apellido__c</fullName>
    <description>Este campo se utiliza para juntar Nombre y Apellido para el envio de plantillas Docusign, NO BORRAR</description>
    <formula>Nombre__c &amp; &quot; &quot; &amp;  Apellido__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre y Apellido</label>
    <type>Text</type>
</CustomField>