force-app/main/default/objects/Integrante__c/fields/Nro_de_documento__c.field-meta.xml
<CustomField>
    <fullName>Nro_de_documento__c</fullName>
    <label>Nro. de documento</label>
    <length>15</length>
    <type>Text</type>
</CustomField>