force-app/main/default/objects/Integrante__c/fields/Obra_social_actual__c.field-meta.xml
<CustomField>
    <fullName>Obra_social_actual__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Obra social actual</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Obra social</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Integrantes (Obra social actual)</relationshipLabel>
    <relationshipName>Integrantes1</relationshipName>
    <type>Lookup</type>
</CustomField>