force-app/main/default/objects/Integrante__c/fields/Telfono__c.field-meta.xml
<CustomField>
    <fullName>Telfono__c</fullName>
    <label>Teléfono</label>
    <type>Phone</type>
</CustomField>