force-app/main/default/objects/Integrante__c/fields/Tipo_de_Documento__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Documento__c</fullName>
    <label>Tipo de Documento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipo_de_Documento</valueSetName>
    </valueSet>
</CustomField>