force-app/main/default/objects/Integrante__c/fields/Tipo_de_relacion_con_titular__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_relacion_con_titular__c</fullName>
    <label>Tipo de relación con titular</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HI</fullName>
                <label>Hijo/a</label>
            </value>
            <value>
                <fullName>CO</fullName>
                <label>Cónyuge</label>
            </value>
            <value>
                <fullName>OP</fullName>
                <label>Otro Pariente</label>
            </value>
            <value>
                <fullName>PA</fullName>
                <label>Padre</label>
            </value>
            <value>
                <fullName>MA</fullName>
                <label>Madre</label>
            </value>
            <value>
                <fullName>SO</fullName>
                <label>Sobrino/a</label>
            </value>
            <value>
                <fullName>AB</fullName>
                <label>Abuelo/a</label>
            </value>
            <value>
                <fullName>NT</fullName>
                <label>Nieto/a</label>
            </value>
            <value>
                <fullName>HE</fullName>
                <label>Hermano/a</label>
            </value>
            <value>
                <fullName>YE</fullName>
                <label>Yerno</label>
            </value>
            <value>
                <fullName>NU</fullName>
                <label>Nuera</label>
            </value>
            <value>
                <fullName>SU</fullName>
                <label>Suegro/a</label>
            </value>
            <value>
                <fullName>TI</fullName>
                <label>Tío/a</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>