force-app/main/default/objects/Integrante__c/fields/Tipo_y_numerdo_documento_docusign__c.field-meta.xml
<CustomField>
    <fullName>Tipo_y_numerdo_documento_docusign__c</fullName>
    <description>Este campo se utiliza para unir el tipo de documento y Nro de documento para el envio de plantillas de Docusign, NO BORRAR</description>
    <formula>TEXT(Tipo_de_Documento__c)&amp; &quot;-&quot; &amp;   Nro_de_documento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo y numerdo documento docusign</label>
    <type>Text</type>
</CustomField>