force-app/main/default/objects/Integrante__c/validationRules/aportes_obligatorio_si_check_tildado.validationRule-meta.xml
<ValidationRule>
    <fullName>aportes_obligatorio_si_check_tildado</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
				AND(
				    Indicador_de_aporte__c,
  		    ISBLANK(Aportes__c) 
				),
    AND(
								NOT(ISBLANK(Aportes__c)),
								NOT(Indicador_de_aporte__c)
				)
)</errorConditionFormula>
    <errorDisplayField>Aportes__c</errorDisplayField>
    <errorMessage>Si &quot;Indicador de aporte&quot; está tildado, debe ingresar los aportes, en caso contrario, debe quedar en blanco</errorMessage>
</ValidationRule>