force-app/main/default/objects/Integrante__c/validationRules/bb_sin_dni_checked.validationRule-meta.xml
<ValidationRule>
    <fullName>bb_sin_dni_checked</fullName>
    <active>true</active>
    <description>Si el campo Bebé sin DNI está tildado, no se deberá ingresar ningún DNI ni CUIT.</description>
    <errorConditionFormula>AND(
				OR(
							 $Profile.Name = &apos;Administrador del sistema&apos;,
								$Profile.Name = &apos;Agente de Ventas&apos;,
								$Profile.Name = &apos;Lider de Ventas&apos;
				),
				Bebe_sin_DNI__c,
				OR(
				    NOT(ISBLANK(Nro_de_documento__c)),
								NOT(ISBLANK(CUIT_Sin_guiones__c))  
    )
)</errorConditionFormula>
    <errorMessage>Si el campo Bebé sin DNI está tildado, no se debe ingresar ningún Nro. de documento ni CUIT</errorMessage>
</ValidationRule>