force-app/main/default/objects/Integrante__c/validationRules/IND_No_modificar_integrante_de_reingreso.validationRule-meta.xml
<ValidationRule>
    <fullName>IND_No_modificar_integrante_de_reingreso</fullName>
    <active>false</active>
    <description>No se puede modificar integrante cuando es reingreso</description>
    <errorConditionFormula>AND(
    NOT(ISCHANGED(Integrante_accion_rapida__c)),
    Integrante_accion_rapida__c,
   OR(
      ISCHANGED( Apellido__c ),
      ISCHANGED( Nombre__c )
     )

)</errorConditionFormula>
    <errorMessage>Cuando el integrante es Reingreso, no puede modificar Nombre y Apellido</errorMessage>
</ValidationRule>