force-app/main/default/objects/Integrante__c/validationRules/indicador_de_aportes_VOLDIR_VOLEMP.validationRule-meta.xml
<ValidationRule>
    <fullName>indicador_de_aportes_VOLDIR_VOLEMP</fullName>
    <active>true</active>
    <description>El campo &quot;Aportes del titular&quot; no se puede completar si el segmento del titular es &quot;VOLDIR/VOLEMP&quot;</description>
    <errorConditionFormula>AND(
 Indicador_de_aporte__c ,
OR(
  ISPICKVAL(Oportunidad__r.Segmento_del_Grupo_Familiar__c , &quot;VOLDIR&quot;) ,
ISPICKVAL(Oportunidad__r.Segmento_del_Grupo_Familiar__c , &quot;VOLEMP&quot;)
)
)</errorConditionFormula>
    <errorMessage>si el segmento del titular es &quot;VOLDIR/VOLEMP&quot;, no podremos marcar el indicador de aportes.</errorMessage>
</ValidationRule>