force-app/main/default/objects/Integrante__c/validationRules/Si_el_titular_es_OBL.validationRule-meta.xml
<ValidationRule>
    <fullName>Si_el_titular_es_OBL</fullName>
    <active>true</active>
    <description>Validacion para integrante hijo que no pueda marcar el check deriva aportes si el segmento del titular es OBL</description>
    <errorConditionFormula>OR(
   AND(
				   ISPICKVAL(Tipo_de_relacion_con_titular__c,&quot;HI&quot;),
			   	OR( 
			      	ISPICKVAL(Oportunidad__r.Segmento_del_Grupo_Familiar__c,&quot;OBLDIR&quot;),
						   	ISPICKVAL(Oportunidad__r.Segmento_del_Grupo_Familiar__c,&quot;OBLEMP&quot;)
						  		),
			    OR(			
				   		 Indicador_de_aporte__c,
				      NOT(ISBLANK(Aportes__c))
						  		)
							),
					  		
			    	AND(
				        ISPICKVAL(Tipo_de_relacion_con_titular__c,&quot;HI&quot;),
			         	OR( 
			            	ISPICKVAL(Oportunidad__r.Segmento_del_Grupo_Familiar__c,&quot;OBLDIR&quot;),
							         ISPICKVAL(Oportunidad__r.Segmento_del_Grupo_Familiar__c,&quot;OBLEMP&quot;)
							         	),
			         AND(			
					    	      Indicador_de_aporte__c,
				            NOT(ISBLANK(Aportes__c))
																)
												)
				)</errorConditionFormula>
    <errorMessage>No puede completar los campos &quot;Indicador de aporte&quot; o &quot;Aporte&quot; si el segmento del titular es OBL y el tipo de relacion con el titular es &quot;Hijo&quot;</errorMessage>
</ValidationRule>