force-app/main/default/objects/Integrante__c/validationRules/Validacion_de_CUIT_Integrante.validationRule-meta.xml
<ValidationRule>
    <fullName>Validacion_de_CUIT_Integrante</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
AND(
NOT(REGEX(CUIT_Sin_guiones__c, &quot;^[0-9]{11}$&quot;)),
NOT(ISBLANK(CUIT_Sin_guiones__c))
),
TRUE,
IF(
value(right(CUIT_Sin_guiones__c,1))==0,
11-(MOD((value(RIGHT(LEFT(CUIT_Sin_guiones__c,10),1))*2)+
(value(RIGHT(LEFT(CUIT_Sin_guiones__c,9),1))*3)+
(value(RIGHT(LEFT(CUIT_Sin_guiones__c,8),1))*4)+
(value(RIGHT(LEFT(CUIT_Sin_guiones__c,7),1))*5)+
(value(RIGHT(LEFT(CUIT_Sin_guiones__c,6),1))*6)+
(value(RIGHT(LEFT(CUIT_Sin_guiones__c,5),1))*7)+
(value(RIGHT(LEFT(CUIT_Sin_guiones__c,4),1))*2)+
(value(RIGHT(LEFT(CUIT_Sin_guiones__c,3),1))*3)+
(value(RIGHT(LEFT(CUIT_Sin_guiones__c,2),1))*4)+
(value(LEFT(CUIT_Sin_guiones__c,1))*5),11))!=11,
11-(MOD((value(RIGHT(LEFT(CUIT_Sin_guiones__c,10),1))*2)+
(value(RIGHT(LEFT(CUIT_Sin_guiones__c,9),1))*3)+
(value(RIGHT(LEFT(CUIT_Sin_guiones__c,8),1))*4)+
(value(RIGHT(LEFT(CUIT_Sin_guiones__c,7),1))*5)+
(value(RIGHT(LEFT(CUIT_Sin_guiones__c,6),1))*6)+
(value(RIGHT(LEFT(CUIT_Sin_guiones__c,5),1))*7)+
(value(RIGHT(LEFT(CUIT_Sin_guiones__c,4),1))*2)+
(value(RIGHT(LEFT(CUIT_Sin_guiones__c,3),1))*3)+
(value(RIGHT(LEFT(CUIT_Sin_guiones__c,2),1))*4)+
(value(LEFT(CUIT_Sin_guiones__c,1))*5),11))!=value(RIGHT(CUIT_Sin_guiones__c,1))
)
)</errorConditionFormula>
    <errorDisplayField>CUIT_Sin_guiones__c</errorDisplayField>
    <errorMessage>Integrante - Ingrese un CUIT válido</errorMessage>
</ValidationRule>